tests/ui/proc-macro/issue-89566-suggest-fix-invalid-top-level-macro-attr.stderr
error: `derive` attribute cannot be used at crate level
  --> $DIR/issue-89566-suggest-fix-invalid-top-level-macro-attr.rs:3:1
   |
LL | #![derive(Debug)]
   | ^^^^^^^^^^^^^^^^^
LL | struct Test {}
   |        ---- the inner attribute doesn't annotate this struct
   |
help: perhaps you meant to use an outer attribute
   |
LL - #![derive(Debug)]
LL + #[derive(Debug)]
   |

error: cannot determine resolution for the attribute macro `derive`
  --> $DIR/issue-89566-suggest-fix-invalid-top-level-macro-attr.rs:3:4
   |
LL | #![derive(Debug)]
   |    ^^^^^^
   |
   = note: import resolution is stuck, try simplifying macro imports

error: aborting due to 2 previous errors

